GEODE-1204 modified conditionals and opacity to make logo visible on Releases page.
Closes #45971

--- a/website/Rules
+++ b/website/Rules
@@ -44,6 +44,12 @@ compile '/community/*' do
   layout 'community'
 end
 
+compile '/releases/*' do
+  @releases = true
+  filter :erb
+  layout 'releases'
+end
+
 compile '*' do
   if item.binary?
     # don’t filter binary items
