GEODE-2031 Edit nanoc for file extensions

--- a/website/Rules
+++ b/website/Rules
@@ -59,6 +59,13 @@ compile '/**/*' do
   end
 end
 
+route '/**/*.html' do
+  if item.identifier =~ '/index.*'
+    '/index.html'
+  else
+    item.identifier.without_ext + '.html'
+  end
+end
 
 
 layout '/**/*', :erb
