--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,50 @@
  */
 
 plugins {
-  id "org.nosphere.apache.rat" version "0.3.0"
+  id 'org.nosphere.apache.rat' version '0.3.0'
+  id 'org.ajoberstar.grgit' version '1.6.0'
 }
 
-apply plugin: "org.nosphere.apache.rat"
+apply plugin: 'org.ajoberstar.grgit'
+
+task clean << {
+  delete buildDir
+}
+
+def dockerCmd = "docker run -v '${projectDir}':/geode-site -p 3000:3000 -w /geode-site/website apachegeode/geode-site-build "
+
+task compile(type:Exec, dependsOn: rat) {
+  inputs.dir "${projectDir}/website"
+  outputs.dir "${buildDir}/content"
+  executable 'bash'
+  args "-c", dockerCmd + "nanoc compile"
+}
+
+task view(type:Exec, dependsOn: compile) {
+  executable 'bash'
+  args "-c", dockerCmd + "nanoc view"
+}
+
+task publish(dependsOn: compile) {
+  doLast {
+    def branch = grgit.branch.current.name
+    if (branch != 'master') {
+      throw new GradleException("Cannot publish from branch ${branch}, only from master")
+    }
+
+    def status = grgit.branch.status(name: 'master')
+    if (status.aheadCount != 0) {
+      throw new GradleException("Cannot publish with $status.aheadCount unpushed changes")
+    }
+
+    grgit.checkout(branch: 'asf-site')
+    grgit.pull()
+    copy {
+      from "${buildDir}/content"
+      into projectDir
+    }
+  }
+}
 
 rat {
   xmlOutput = false
@@ -60,6 +100,5 @@ rat {
     'website/utilities/markers.txt',
     'website/tmp/**',
     'website/layouts/**',
-    'content/**'
   ]
 }
