--- a/website/nanoc.yaml
+++ b/website/nanoc.yaml
@@ -77,6 +77,9 @@ data_sources:
     # it will become “/about.html/” instead.
     allow_periods_in_identifiers: false
 
+    extra_files:
+      - "**/.htaccess"
+
 # Configuration for the “watch” command, which watches a site for changes and
 # recompiles if necessary.
 watcher:
