--- a/docs/.htaccess
+++ b/docs/.htaccess
@@ -14,4 +14,4 @@
 # limitations under the License.
 
 RewriteEngine On
-RewriteRule ^/guide/latest/(.*)$ /guide/11/$1 [R=303,NC,L]
+RewriteRule ^guide/latest/(.*)$ /docs/guide/11/$1 [R=303,NC,L]
