GEODE-2975: Change the location of the lucene xsd
The lucene xsd was not in the correct location on the website.

Also, fixing the website generation so that it copies the xsds to the
output directory.

--- a/website/Rules
+++ b/website/Rules
@@ -30,7 +30,7 @@
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
-passthrough /\/(bootstrap|css|font|img|js|static|guide|fonts|images|javascripts|stylesheets|subnavs)\/.*/
+passthrough /\/(bootstrap|css|font|img|js|static|guide|fonts|images|javascripts|stylesheets|subnavs|schema)\/.*/
 passthrough '/**/.htaccess'
 
 compile '/docs/**/*' do
