GEODE-6213 Redirect http://geode.apache.org to https://geode.apache.org, delete separate htaccess file from the docs subdirectory

--- a/website/content/.htaccess
+++ b/website/content/.htaccess
@@ -14,4 +14,5 @@
 # limitations under the License.
 
 RewriteEngine On
-RewriteRule ^guide/latest/(.*)$ /docs/guide/12/$1 [NC,L,PT]
+RewriteCond %{HTTPS} !=on
+RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
