--- a/.htaccess
+++ b/.htaccess
@@ -16,3 +16,5 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+RedirectMatch 301 /serverman/(.*) https://geode.apache.org/docs/guide/18/$1
+
