--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,5 @@ RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
 RedirectMatch 301 /serverman/(.*) https://geode.apache.org/docs/guide/18/$1
+RedirectMatch 301 /geodeman/(.*) https://geode.apache.org/docs/guide/18/$1
 
