--- a/website/content/.htaccess
+++ b/website/content/.htaccess
@@ -16,3 +16,6 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+RedirectMatch 301 /serverman/(.*) https://geode.apache.org/docs/guide/18/$1
+RedirectMatch 301 /geodeman/(.*) https://geode.apache.org/docs/guide/18/$1
+
