--- a/website/content/.htaccess
+++ b/website/content/.htaccess
@@ -18,4 +18,5 @@ RewriteCond %{HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
 RedirectMatch 301 /serverman/(.*) https://geode.apache.org/docs/guide/18/$1
 RedirectMatch 301 /geodeman/(.*) https://geode.apache.org/docs/guide/18/$1
-
+RedirectMatch 301 /dotnetdocs/(.*) https://geode.apache.org/releases/latest/dotnetdocs/$1
+RedirectMatch 301 /cppdocs/(.*) https://geode.apache.org/releases/latest/cppdocs/$1
