--- a/website/content/.htaccess
+++ b/website/content/.htaccess
@@ -20,3 +20,4 @@ RedirectMatch 301 /serverman/(.*) https://geode.apache.org/docs/guide/114/$1
 RedirectMatch 301 /geodeman/(.*) https://geode.apache.org/docs/guide/114/$1
 RedirectMatch 301 /cppapiref/(.*) https://geode.apache.org/releases/latest/cppdocs/$1
 RedirectMatch 301 /dotnetapiref/(.*) https://geode.apache.org/releases/latest/dotnetdocs/$1
+RedirectMatch 301 /docs/guide/14/(.*) https://geode.apache.org/docs/guide/114/$1
