--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,9 +19,9 @@ name: develop
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "master" ]
 
 permissions:
   contents: read
