Add additional graphics exclusion to build.gradle file
This commit adds an additional graphics exclusion to the build.gradle
file in order to clear an error thrown on builds.

Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ rat {
 
     // graphics
     'website/content/docs/guide/**/*.svg',
+    'website/content/img/**/*.svg',
 
     // compiled logs and locks
     'website/utilities/markers.txt',
